--- a/src/app/Pages/HomeTab/HomeTab.page.html
+++ b/src/app/Pages/HomeTab/HomeTab.page.html
@@ -25,9 +25,12 @@
 
     <ion-row class="row-item">
       <ion-col size="12">
-        <div class="ion-text-center">
+        <div class="ion-text-center elevation-container">
           <ng-container *ngIf="elevation$ | async as elevation; else loadingOrPlaceholder">
-            <p class="elevation-text">{{ elevation?.results?.[0]?.elevation}} m.n.m</p>
+            <div class="elevation-text-container">
+              <p class="elevation-text">{{ elevation?.results?.[0]?.elevation}} </p>
+              <p class="sea-level">m.n.m</p>
+            </div>
           </ng-container>
 
           <ng-template #loadingOrPlaceholder>
@@ -40,9 +43,9 @@
     <!-- Second Row -->
     <ion-row class="row-item">
       <ion-col size="12" class="ion-text-center">
-        <ion-button color="success" (click)="startTracking()">
+        <ion-button [color]="buttonColor" (click)="toggleTracking()">
           <ion-icon name="disc-outline"></ion-icon>
-          Start tracking
+          {{ buttonText }}
         </ion-button>
       </ion-col>
       <ion-col size="12" class="ion-text-center">
