--- a/src/app/Pages/HomeTab/HomeTab.page.scss
+++ b/src/app/Pages/HomeTab/HomeTab.page.scss
@@ -1,5 +1,5 @@
 ion-content{
-  --background: url("~src/assets/images/mountain (3).jpg") 0 0/100% 100% no-repeat;
+  --background: url("~src/assets/images/mountain2.jpg") 0 0/100% 100% no-repeat;
 }
 .custom-content {
   height: 100%;
@@ -17,10 +17,29 @@ ion-content{
   align-items: center;
   justify-content: center;
 }
+.elevation-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
+.elevation-text-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .elevation-text{
-  font-size: xxx-large;
+  font-size: 100px;
   font-weight: bold;
+  padding-top: 0;
+  padding-bottom: 0;
+  margin-bottom: 0px !important;
+  margin-top: 0px !important;
+}
+.sea-level{
+  font-size: x-large;
+  font-weight: bold;
+
 }
 .mountain-icon
 {
