Working elevation tracking with watchPosition

--- a/src/app/Pages/HomeTab/HomeTab.page.html
+++ b/src/app/Pages/HomeTab/HomeTab.page.html
@@ -34,7 +34,7 @@
           </ng-container>
 
           <ng-template #loadingOrPlaceholder>
-            <p class="loading-text">Loading...</p>
+            <p class="loading-text">To get elevation data, push "Start Tracking"</p>
           </ng-template>
         </div>
       </ion-col>
