--- a/src/app/Pages/HomeTab/HomeTab.page.html
+++ b/src/app/Pages/HomeTab/HomeTab.page.html
@@ -3,6 +3,14 @@
     <ion-title>
       Home
     </ion-title>
+
+
+    <ion-buttons slot="end">
+      <!-- Tlačítkem otevřu stránku nastavení -->
+      <ion-button (click)="openSettings()">
+        <ion-icon name="cog" slot="icon-only"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
@@ -29,7 +37,7 @@
           <ng-container *ngIf="elevation$ | async as elevation; else loadingOrPlaceholder">
             <div class="elevation-text-container">
               <p class="elevation-text">{{ elevation?.results?.[0]?.elevation}} </p>
-              <p class="sea-level">m.n.m</p>
+              <p class="sea-level">above seal level</p>
             </div>
           </ng-container>
 
