--- a/src/app/Pages/HomeTab/HomeTab.page.scss
+++ b/src/app/Pages/HomeTab/HomeTab.page.scss
@@ -1,5 +1,8 @@
-ion-content{
+.ion-content-first{
   --background: url("~src/assets/images/mountain2.jpg") 0 0/100% 100% no-repeat;
+}
+.ion-content-second{
+  --background: url("~src/assets/images/mountain (2).jpg") 0 0/100% 100% no-repeat;
 }
 .custom-content {
   height: 100%;
