--- a/src/app/Pages/Settings/settings.page.html
+++ b/src/app/Pages/Settings/settings.page.html
@@ -21,64 +21,67 @@
   </ion-header>
 
 
-  <ion-list>
-    <ion-item-group>
-      <ion-item-divider>
-        <h2>   Refresh rate: </h2>
-      </ion-item-divider>
-    <ion-radio-group>
-      <ion-item>
-        <ion-radio>30 seconds</ion-radio>
-      </ion-item>
-      <ion-item>
-        <ion-radio>1 minute</ion-radio>
-      </ion-item>
-      <ion-item>
-        <ion-radio>2 minutes</ion-radio>
-      </ion-item>
-      <ion-item lines="none">
-        <ion-radio>5 minutes</ion-radio>
-      </ion-item>
-    </ion-radio-group>
-    </ion-item-group>
+  <form [formGroup]="form">
+    <ion-list>
+      <ion-item-group>
+        <ion-item-divider>
+          <h2>Refresh rate:</h2>
+        </ion-item-divider>
+        <ion-radio-group formControlName="refreshRate">
+          <ion-item>
+            <ion-radio value="30000">30 seconds</ion-radio>
+          </ion-item>
+          <ion-item>
+            <ion-radio value="60000">1 minute</ion-radio>
+          </ion-item>
+          <ion-item>
+            <ion-radio  value="120000">2 minutes</ion-radio>
+          </ion-item>
+          <ion-item lines="none">
+            <ion-radio value="300000">5 minutes</ion-radio>
+          </ion-item>
+        </ion-radio-group>
+      </ion-item-group>
+
+      <ion-item-group>
+        <ion-item-divider>
+          <h2>Units:</h2>
+        </ion-item-divider>
+        <ion-radio-group formControlName="units">
+          <ion-item>
+            <ion-radio value="meters">Meters</ion-radio>
+          </ion-item>
+          <ion-item lines="none">
+            <ion-radio  value="feet">Feet</ion-radio>
+          </ion-item>
+        </ion-radio-group>
+      </ion-item-group>
+    </ion-list>
 
     <ion-item-group>
       <ion-item-divider>
-        <h2>   Units: </h2>
+        <h2>Background:</h2>
       </ion-item-divider>
-    <ion-radio-group>
-      <ion-item>
-        <ion-radio>Meters</ion-radio>
-      </ion-item>
-      <ion-item lines="none">
-        <ion-radio>Feet</ion-radio>
-      </ion-item>
-    </ion-radio-group>
+      <ion-radio-group formControlName="pictureOption">
+        <ion-row class="centerClass">
+          <ion-col>
+            <ion-radio value="ion-content-first"></ion-radio>
+          </ion-col>
+          <ion-col>
+            <ion-radio value="ion-content-second"></ion-radio>
+          </ion-col>
+        </ion-row>
+      </ion-radio-group>
+      <ion-row class="centerClass marginLeft">
+        <ion-col >
+          <img alt="Moutain range" src="assets/images/mountain2.jpg" class="Card"/>
+        </ion-col>
+        <ion-col>
+          <img alt="Moutain range" src="assets/images/mountain (2).jpg" class="Card"/>
+        </ion-col>
+      </ion-row>
     </ion-item-group>
-    <ion-item-group>
-      <ion-item-divider>
-        <h2>Background </h2>
-      </ion-item-divider>
-    </ion-item-group>
-  </ion-list>
-  <ion-radio-group>
-    <ion-row class="centerClass">
-      <ion-col >
-        <ion-radio></ion-radio>
-      </ion-col>
-      <ion-col >
-        <ion-radio></ion-radio>
-      </ion-col>
-    </ion-row>
-  </ion-radio-group>
-  <ion-row class="centerClass marginLeft">
-    <ion-col >
-      <img alt="Moutain range" src="assets/images/mountain2.jpg" class="Card"/>
-    </ion-col>
-    <ion-col>
-      <img alt="Moutain range" src="assets/images/mountain (2).jpg" class="Card"/>
-    </ion-col>
-  </ion-row>
+  </form>
   <!-- formGroup (vyžaduje import modulu ReactiveFormsModule) - jedná se o nejúčinější nástroj formulářů v Angularu -->
   <!-- vytvoření struktury držené pomocí objektu FormGroup v proměnné form (v našem případě) nabízí možnosti validace, -->
   <!-- observable pattern na libovolný prvkek libovolného zanoření, event handlery, dynamické vytváření dalších částí -->
