--- a/src/app/Pages/HomeTab/HomeTab.page.html
+++ b/src/app/Pages/HomeTab/HomeTab.page.html
@@ -42,6 +42,7 @@
           </ng-container>
 
           <ng-template #loadingOrPlaceholder>
+            <p class="elevation-text">_ _ _</p>
             <p class="loading-text">To get elevation data, push "Start Tracking"</p>
           </ng-template>
         </div>
