--- a/src/app/Pages/Settings/settings.page.html
+++ b/src/app/Pages/Settings/settings.page.html
@@ -24,10 +24,15 @@
   <form [formGroup]="form">
     <ion-list>
       <ion-item-group>
+        <ion-row>
         <ion-item-divider>
           <h2>Refresh rate:</h2>
         </ion-item-divider>
+        </ion-row>
         <ion-radio-group formControlName="refreshRate">
+          <ion-item>
+            <ion-radio value="auto">Automatic</ion-radio>
+          </ion-item>
           <ion-item>
             <ion-radio value="30000">30 seconds</ion-radio>
           </ion-item>
