--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,6 +1,6 @@
 <ion-tabs>
 
-  <ion-tab-bar slot="bottom">
+  <ion-tab-bar slot="bottom" class="with-separator">
     <ion-tab-button tab="HomeTab" href="/Pages/HomeTab">
       <ion-icon name="navigate-circle-outline"></ion-icon>
       <ion-label>Home
