--- a/src/app/Pages/HomeTab/HomeTab.page.html
+++ b/src/app/Pages/HomeTab/HomeTab.page.html
@@ -38,6 +38,23 @@
             <div class="elevation-text-container">
               <p class="elevation-text">{{ elevation?.results?.[0]?.elevation}} </p>
               <p class="sea-level">{{settingService.settingsArray[1]}} above sea level</p>
+              <ion-row>
+                <ion-col size="6" class="last">
+              <p>Last update   <br>  {{storageService.sessionTimeStamps[storageService.sessionTimeStamps.length-1]}}</p>
+
+                </ion-col>
+                <ion-col size="6" class="last" *ngIf="storageService.sessionData[storageService.sessionData.length - 2];else notAvailableData">
+                  <p>Last elevation {{
+                      storageService.sessionData[storageService.sessionData.length - 2]
+                    }}</p>
+                </ion-col>
+                <ng-template #notAvailableData>
+                  <ion-col size="6" class="last">
+                    <p>Last elevation <br> not yet available</p>
+                  </ion-col>
+
+                </ng-template>
+              </ion-row>
             </div>
           </ng-container>
 
