--- a/src/app/Pages/StatsTab/StatsTab.page.html
+++ b/src/app/Pages/StatsTab/StatsTab.page.html
@@ -11,7 +11,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true" class="ion-content">
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Statistics</ion-title>
@@ -43,7 +43,7 @@
           <ion-item>
             <ion-label>
               {{ highestPointLastSession }}
-              {{ unitService.IsMeters ? ' meters' : ' feet' }}
+              {{  settingService.settingsArray[1] }}
             </ion-label>
           </ion-item>
           <ion-item>
@@ -53,7 +53,7 @@
           </ion-item>
           <ion-item>
             <ion-label>{{elevationChangeLastSession}}
-              {{ unitService.IsMeters ? ' meters' : ' feet' }}
+              {{ settingService.settingsArray[1]}}
             </ion-label>
           </ion-item>
           <ion-item>
@@ -63,7 +63,7 @@
           </ion-item>
           <ion-item>
             <ion-label>{{lowestPointLastSession}}
-              {{ unitService.IsMeters ? ' meters' : ' feet' }}
+              {{  settingService.settingsArray[1] }}
             </ion-label>
           </ion-item>
         </ion-radio-group>
@@ -79,7 +79,7 @@
           </ion-item>
           <ion-item>
             <ion-label>{{highestPointOverall}}
-              {{ unitService.IsMeters ? ' meters' : ' feet' }}
+              {{  settingService.settingsArray[1] }}
             </ion-label>
           </ion-item>
           <ion-item>
@@ -89,7 +89,7 @@
           </ion-item>
           <ion-item>
             <ion-label>{{overallElevationChange}}
-              {{ unitService.IsMeters ? ' meters' : ' feet' }}
+              {{  settingService.settingsArray[1] }}
             </ion-label>
           </ion-item>
           <ion-item>
@@ -99,7 +99,7 @@
           </ion-item>
           <ion-item>
             <ion-label>{{lowestPointOverall}}
-              {{ unitService.IsMeters ? ' meters' : ' feet' }}
+              {{  settingService.settingsArray[1] }}
             </ion-label>
           </ion-item>
         </ion-radio-group>
