--- a/src/app/tabs/tabs.page.scss
+++ b/src/app/tabs/tabs.page.scss
@@ -1,1 +1,13 @@
+ion-tabs {
+  position: relative;
+}
 
+ion-tab-bar.with-separator::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 50%;
+  border-left: 1px solid #ccc; /* Adjust the color as needed */
+  transform: translateX(-50%);
+}
