--- a/src/app/Pages/StatsTab/StatsTab.page.html
+++ b/src/app/Pages/StatsTab/StatsTab.page.html
@@ -42,7 +42,7 @@
           </ion-item>
           <ion-item>
             <ion-label>
-              {{ highestPointLastSession }}
+              {{ this.statsService.highestPointLastSession }}
               {{  settingService.settingsArray[1] }}
             </ion-label>
           </ion-item>
@@ -52,7 +52,7 @@
             </ion-item-divider>
           </ion-item>
           <ion-item>
-            <ion-label>{{elevationChangeLastSession}}
+            <ion-label>{{this.statsService.elevationChangeLastSession}}
               {{ settingService.settingsArray[1]}}
             </ion-label>
           </ion-item>
@@ -62,7 +62,7 @@
             </ion-item-divider>
           </ion-item>
           <ion-item>
-            <ion-label>{{lowestPointLastSession}}
+            <ion-label>{{this.statsService.lowestPointLastSession}}
               {{  settingService.settingsArray[1] }}
             </ion-label>
           </ion-item>
@@ -78,17 +78,17 @@
             </ion-item-divider>
           </ion-item>
           <ion-item>
-            <ion-label>{{highestPointOverall}}
+            <ion-label>{{this.statsService.highestPointOverall}}
               {{  settingService.settingsArray[1] }}
             </ion-label>
           </ion-item>
           <ion-item>
             <ion-item-divider>
-              <h3>Highest Elevation change:</h3>
+              <h3>Highest Elevation change in single session:</h3>
             </ion-item-divider>
           </ion-item>
           <ion-item>
-            <ion-label>{{overallElevationChange}}
+            <ion-label>{{this.statsService.overallElevationChange}}
               {{  settingService.settingsArray[1] }}
             </ion-label>
           </ion-item>
@@ -98,7 +98,7 @@
             </ion-item-divider>
           </ion-item>
           <ion-item>
-            <ion-label>{{lowestPointOverall}}
+            <ion-label>{{this.statsService.lowestPointOverall}}
               {{  settingService.settingsArray[1] }}
             </ion-label>
           </ion-item>
